--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,2 +1,2 @@
 config:
- info: "master branch,springclou-config/config-dev.yml version=0.99999"
+ info: "master branch,springclou-config/config-dev.yml version=0.2234242423"
